# snake-dmrg

./: CMakeLists.txt  InstallationGuide.md  PossibleFutureImprovements.md  ProjectHome.md  README.md  gen_model.m  gen_model_mult.m  gen_model_multipara.m  genspinlessfermionsite.m  genspinsite.m  lindiscr.m  mat2file.m  plotsigmaz.m  plotspectral.m  plotvisibility.m  roklogdiscr.m  savepara.m  sitebase2file.m  star2tridiag.m
cppsrc/: AdaptiveTimeDependentDMRG.cpp  AdaptiveTimeDependentDMRG.h  CMakeLists.txt  Chain.cpp  Chain.h  ChainHamiltonian.cpp  ChainHamiltonian.h  FiniteDMRG.cpp  FiniteDMRG.h  FiniteTemperatureDMRG.cpp  FiniteTemperatureDMRG.h  InfiniteDMRG.cpp  InfiniteDMRG.h  SuperChain.cpp  SuperChain.h  SuperChain_FTDMRG.cpp  SuperChain_iDMRG.cpp  SuperChain_tDMRG.cpp  blocham.cpp  blocham.h  block.cpp  block.h  dmrg.cpp  dmrg.h  dtmat.cpp  dtmat.h  gqn.cpp  gqn.h  gqnbase.cpp  gqnbase.h  gqnmat.cpp  gqnmat.h  makefile  makefile_WithoutCmake  public.cpp  public.h  setting.h  site.cpp  site.h  snake.cpp  (+5 more)
